// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxShow components default render 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <AnimatedComponent
    source={1}
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        },
        Object {
          "marginRight": 3,
        },
      ]
    }
  />
</View>
`;

exports[`BoxShow components kj 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "green",
      },
    ]
  }
>
  <AnimatedComponent
    source={1}
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        },
        Object {
          "marginRight": 3,
        },
      ]
    }
  />
  <Text>
    我是children
  </Text>
</View>
`;

exports[`BoxShow components render widthAll 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "green",
      },
    ]
  }
>
  <AnimatedComponent
    source={1}
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        },
        Object {
          "marginRight": 3,
        },
      ]
    }
  />
  <Text>
    我是children
  </Text>
</View>
`;

exports[`BoxShow components render widthChildren 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <AnimatedComponent
    source={1}
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        },
        Object {
          "marginRight": 3,
        },
      ]
    }
  />
  <Text>
    我是children
  </Text>
</View>
`;

exports[`BoxShow components render widthSource 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <AnimatedComponent
    source={1}
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        },
        Object {
          "marginRight": 3,
        },
      ]
    }
  />
</View>
`;

exports[`BoxShow components render widthStyle 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "green",
      },
    ]
  }
>
  <AnimatedComponent
    source={1}
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "rotate": "0deg",
            },
          ],
        },
        Object {
          "marginRight": 3,
        },
      ]
    }
  />
  <Text>
    我是children
  </Text>
</View>
`;
